--- a/README
+++ b/README
@@ -62,8 +62,8 @@ Upon running the second command, you should enter the number that corresponds to
 	Click on user created (e.g. carpenawashere)
 	Open the "Security credentials" tab, and then choose "Create access key"
 	To see the new access key, choose "Show". Your credentials resemble the following:
-		Access key ID: AKIAQB2SHQLRR6NF57M5
-		Secret access key: 73IWqwYi2nyPG0f16AnCjDARbBPK3zS6Uuts+p8i
+		Access key ID: <ASDASDASDASDASDASDASDASDASD>
+		Secret access key: <ASDASDASDASDASDASDASDASDASD>
 	To download the key pair, choose 'Download .csv' file. 
 	Store the .csv file with keys in a secure location.
 
