--- a/README
+++ b/README
@@ -16,7 +16,7 @@ Navigate to "IAM" -> "Access Management" -> "Policies". Find and select the foll
 	AmazonS3FullAccess
 	AmazonSQSFullAccess
 
---EC2 Setup
+--EC2 Setup [Perform for EC2_A and EC2_B]
 Click on "Services" -> "EC2"
 Click on "Instances" in the drop down "Instances" Section 
 Click on "Launch Instances" -> "Launch Instancess" 
@@ -41,17 +41,17 @@ Click "Review and Launch"
 	You will probably see a status of "Pending" for the Instance State of each EC2. 
 	While waiting for these to switch to "Running," open a terminal and move the .pem 
 	file you downloaded to your home directory. exit
+
 --Run the following command to set the correct permissions for the .pem file:
 	$ chmod 400 EC2_A_CS643.pem
+
 --Connect to your EC2 instances (after they have started running), 
-run the following command in your terminal (replacing <YOUR_EC2_INSTANCE_PUBLIC_DNS> with 
+Run the following command in your terminal (replacing <YOUR_EC2_INSTANCE_PUBLIC_DNS> with 
 the "Public IPv4 DNS" attribute of either EC2 instance):
-
-$ ssh -i "~/cs643.pem" ec2-user@<YOUR_EC2_INSTANCE_PUBLIC_IPV4_ADDRESS>
+	$ ssh -i "~/cs643.pem" ec2-user@<YOUR_EC2_INSTANCE_PUBLIC_IPV4_ADDRESS>
 After you have connected, run the following commands to update Java from 1.7 to 1.8 on the EC2:
-
-$ sudo yum install java-1.8.0-devel
-$ sudo /usr/sbin/alternatives --config java
+	$ sudo yum install java-1.8.0-devel
+	$ sudo /usr/sbin/alternatives --config java
 Upon running the second command, you should enter the number that corresponds to 
 	java-1.8.0-openjdk.x86_64 (/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.322.b06-2.el8_5.x86_64/jre/bin/java)
 	**You will need to complete this step on BOTH EC2's.
@@ -62,48 +62,41 @@ Upon running the second command, you should enter the number that corresponds to
 	Click on user created (e.g. carpenawashere)
 	Open the "Security credentials" tab, and then choose "Create access key"
 	To see the new access key, choose "Show". Your credentials resemble the following:
-		Access key ID: <ASDASDASDASDASDASDASDASDASD>
-		Secret access key: <ASDASDASDASDASDASDASDASDASD>
+		Access key ID: AKIAQB2SHQLRR6NF57M5
+		Secret access key: 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
 	To download the key pair, choose 'Download .csv' file. 
 	Store the .csv file with keys in a secure location.
 
 --SSH into both EC2's that you created in the previous step, and on each 
 one, create a file:
-	mkdir .aws
-	touch .aws/credentials
-	vi .aws/credentials
-
---Paste those copied credentials into the credential file on each EC2 as 
-follows:
+	$mkdir .aws
+	$touch .aws/credentials
+	$vi .aws/credentials
+	**Paste those copied credentials into the credential file on each EC2 as follows:
 	[default]
-	aws_access_key_id=AKIAQB2SHQLRR6NF57M5
-	aws_secret_access_key=73IWqwYi2nyPG0f16AnCjDARbBPK3zS6Uuts+p8i
-**Note: You will need to re-copy and paste these credentials onto both EC2's whenever they change (after your session ends).
+	aws_access_key_id= THI5I5NOTTH3ACCE55K3Y  
+	aws_secret_access_key= THI5I5NOTTH3S3CR3TACCE55K3Y
+	**Note: You will need to re-copy and paste these credentials onto both EC2's whenever 
+	they change (after your session ends).
 
---Java/Maven Installation
+--Java/Maven/Git Installation
 If you do not have an up-to-date version of Java or Maven installed on your local machine, run the following commands locally:
-	sudo apt install openjdk-11-jre-headless
-	sudo apt install openjdk-11-jdk-headless
-	sudo apt install maven
+	$sudo yum install openjdk-11-jre-headless
+	$sudo yum install openjdk-11-jdk-headless
+	$sudo /usr/bin/dnf install maven
+	$sudo /usr/bin/dnf install git
 
-Running the application
-In the terminal on your local machine, run the following commands to generate the .jar files for the two applications you will want to run on your EC2's.
-	$ git clone https://github.com/cc362/AWS_ProgAssgn1_CS643.git
-	$ cd AWS_ProgAssgn1_CS643/CarRecognize
-	$ mvn clean install package
-	$ cd ../CarText
-	$ mvn clean install package
-	$ cd ..
-Now, run the following command to securely copy the car-recognition .jar file to one of your EC2's, which we'll call EC2-A:
-	$ scp -i ~/cs643.pem CarRecognize/target/CarRecognize-1.0-SNAPSHOT.jar ec2-user@<YOUR_PUBLIC_DNS_FOR_EC2_A>:~/CarRecognize.jar
-Then run the following command to securely copy the text-recognition .jar file to the OTHER EC2, which we'll call EC2-B:
-	$ scp -i ~/cs643.pem CarText/target/CarText-1.0-SNAPSHOT.jar ec2-user@<YOUR_PUBLIC_DNS_FOR_EC2_B>:~/CarText.jar
-SSH into EC2-B and run the following commands:
-	$ cd ~
-	$ java -jar ~/CarText.jar
-This will begin running the code for text recognition. However, since it depends on items in the SQS queue to process, it will simply wait until we begin running the car 
-recognition code. To begin running the car recognition code, SSH into EC2-A and run the following command:
-	$ java -jar ~/CarRecognize.jar
+--Running the application
+In the terminal on your local machine, run the following commands to retrieve the GitHub Repository of the JAR files to be used for the 2 EC2 Instances.
+	$ git clone https://github.com/cc362/CS643-AWS-ProgAssgn-1.git
+
+--SSH into EC2-B and run the following command:
+	$ java -jar CS643-AWS-ProgAssgn-1/CarText/CarText.jar
+	**This will begin running the code for text recognition. However, since it depends on items in the SQS queue 
+	to process, it will simply wait until we begin running the car recognition code. To begin running the car 
+	recognition code. 
+--SSH into EC2-A and run the following command:
+	$ java -jar CS643-AWS-ProgAssgn-1/CarRecognize/CarRecognize.jar
 Now, both programs will be running simultaneously. The program on EC2-A is processing all images in the S3 bucket (njit-cs-643) and sending the indexes of images that 
 include cars to EC2-B through SQS, which in turn is processing these images to find out which ones include text as well. Finally, once both programs have finished running, 
 you will find a file named output.txt on EC2-B in the home directory. This output file will display the indexes of images that contained both cars and text, along with the 
